renombre clase mejora metodos